--- a/DropBear.Blazor/Components/Buttons/DropBearButton.razor.css
+++ b/DropBear.Blazor/Components/Buttons/DropBearButton.razor.css
@@ -2,8 +2,8 @@
 .dropbear-btn {
   font-family: var(--ff-primary), sans-serif;
   font-size: var(--fs-sm);
-  font-weight: 500;
-  line-height: 1.5;
+  font-weight: var(--fw-500);
+  line-height: var(--lh-md);
   padding: var(--spacing-sm);
   border-radius: var(--br-md);
   cursor: pointer;
