--- a/DropBear.Blazor/Components/Cards/DropBearPromptCard.razor.css
+++ b/DropBear.Blazor/Components/Cards/DropBearPromptCard.razor.css
@@ -4,15 +4,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: var(--spacing-md);
+  gap: var(--spacing-sm);
   max-width: calc(75rem * var(--golden-ratio));
   margin: 0 auto;
-  padding: var(--spacing-md);
+  padding: var(--spacing-sm);
 }
 
 .prompt-card-overlay {
   position: relative;
-  width: 100%;
+  /*width: 100%;*/
   max-width: calc(20rem * var(--golden-ratio));
 }
 
@@ -80,12 +80,12 @@
 .button-group {
   display: flex;
   justify-content: flex-end;
-  gap: var(--spacing-md);
+  gap: var(--spacing-xs);
 }
 
 .prompt-btn {
   border: none;
-  padding: var(--spacing-sm);
+  padding: var(--spacing-xs);
   border-radius: var(--br-md);
   transition: all var(--transition-fast);
   font-family: "Poppins", sans-serif;
@@ -94,7 +94,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: var(--spacing-sm);
+  gap: var(--spacing-xs);
   cursor: pointer;
 }
 
